# webserv

./: .gitignore  CMakeLists.txt  Todo  index.html  index2.html
YoupiBanane/: _index.html  youpi.bad_extension
YoupiBanane/Yeah/: not_happy.bad_extension
YoupiBanane/nop/: other.pouic  youpi.bad_extension
cgi/: GetStringLength.cgi  GetStringLength.cpp
cgi-bin/: printenv.pl  upload.pl
config/: default.conf  parsin_synop.txt
include/: CGI.hpp  GenericObject.hpp  HTTPRequest.hpp  HTTPResponse.hpp  HttpResponse.hpp  Location.hpp  Parser.hpp  RequestParser.hpp  RequestProcessor.hpp  ResponseProcessor.hpp  Server.hpp  ServerManager.hpp  Session.hpp  ThreadPool.hpp  WebservDefines.hpp  webserv.hpp
requsetexample/: example1.txt
src/: CGI.cpp  GeneralObject.cpp  HTTPResponse.cpp  HttpResponse.cpp  Location.cpp  Parser.cpp  ReadConfig.cpp  RequestParser.cpp  RequestProcessor.cpp  Server.cpp  ServerManager.cpp  ServerUtil.cpp  Session.cpp  ThreadPool.cpp  main.cpp
tempFile/: out2
www/: test
www/html/content/: board.html  cookie.html  index.html  upload.html
www/html/error/: error.html  error2.html
